# Verbroken-Verbinding-Prototypes

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  TODO.md  docker-compose.yml  huggingface_utils.py  main.py  parse.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_ui.py
.devcontainer/: README.md  devcontainer.json
docs/: TODO.md  ankertjes.md  data_geïnformeerde_feedback.md  huggingface_token_setup.md  server_setup.md  veertjes.md  welkom.md
docs/pages/: data_geïnformeerde_feedback.md  gevoelswaarde.md  leg_het_me_uit_knop.md  reactiesamenvatter.md  uitlegknop.md  veertjes.md  voor_ontwikkelaars.md  welkom.md
pages/: artikelen_in_simpele_versies.py  data_geïnformeerde_feedback.py  test_pagina.py
src/: data.dgf_outputs_ministral.json  dgf_outputs.json  dgf_venlo.json  huggingface_utils.py  reactions.json  streamlit_utils.py  utils.py
src/data/: articles.json  dgf.json  dgf_outputs.json  dgf_outputs_chatgpt.json  dgf_outputs_ministral.json  gevoelswaarde.json  lhmu.json  reactiesamenvatter.json  veertjes.json
src/pages/: ankertjes.py  artikelen_in_simpele_versies.py  data_geïnformeerde_feedback.py  doc_ankertjes.py  doc_data_geinformeerde_feedback.py  doc_readme.py  gevoelswaarde.py  gewichtjes.py  leg_het_me_uit_knop.py  markdown_page.py  reactiesamenvatter.py  test_pagina.py  uitlegknop.py  veertjes.py  welkom.py
src/pages/docs/: doc_ankertjes.py  doc_data_geinformeerde_feedback.py  doc_data_geïnformeerde_feedback.py  doc_gevoelswaarde.py  doc_leg_het_me_uit_knop.py  doc_reactiesamenvatter.py  doc_readme.py  (+3 more)
