[project]
name = "verbroken-verbinding-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.20.0",
    "psutil>=7.1.2",
    "streamlit>=1.51.0",
    "torch==2.9.0+cu130",
    "torchaudio==2.9.0+cu130",
    "torchvision==0.24.0+cu130",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
