[project]
name = "verbroken-verbinding-prototypes"
version = "0.1.0"
description = "AI prototypes for the Verbroken Verbinding research project, demonstrating news analysis tools using Streamlit and Hugging Face."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.20.0",
    "psutil>=7.1.2",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "streamlit>=1.51.0",
    "torch==2.6.0+cu126",
    "torchaudio==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
